# chencode-hw

./: .gitignore  CMakeLists.txt  CMakelists.txt  build_msvc.bat  readme.md  test_ccsds.csv  test_r13.csv
doc/: FER分辨率与蒙特卡洛帧数分析.md  RSC利用输入等于反馈归零.md  chencode.txt  report.md  requirement.md  信息比特变大性能变化.md  信息论.md  截断式维特比.md  维特比突发错误.md
include/: bcjr.h  ccsds_turbo.h  config.h  convolutional_code.h  csv_export.h  log_map_decoder.h  sim_runner.h  trellis.h  turbo_code.h  viterbi.h
output/: ber_Turbo_LogMAP_20260110_145002_merged.csv  ber_Turbo_LogMAP_20260110_163512_merged.csv  ber_Turbo_LogMAP_20260110_180444_merged.csv  ber_Turbo_LogMAP_K1784_R1-2_20260110_212815_merged.csv  ber_turbo_20260109_212149.csv  ber_turbo_20260109_213911.csv  ber_turbo_20260110_174201.csv  part_0_20260110_180929.csv  part_1_20260110_180929.csv
output/01_turbo_waterfall_20260109/: plot_waterfall.m
output/02_turbo_errorfloor_20260110/: ber_Turbo_LogMAP_20260110_121358_merged.csv  plot_errorfloor.m
output/03_turbo_complete/: ber_turbo_complete.csv  (+2 more)
scripts/: overnight_sim.ps1  parallel_sim.ps1  plot_ber.m  sim_tasks.json  test_tasks.json
src/: bcjr.c  ccsds_turbo.c  convolutional_code.c  csv_export.c  log_map_decoder.c  main.c  sim_runner.c  trellis.c  turbo_code.c  viterbi.c
test_output/: ber_Turbo_LogMAP_K1784_R1-3_20260110_215516_merged.csv  ber_Turbo_LogMAP_K1784_R1-3_20260110_215535_merged.csv  ber_Turbo_LogMAP_K3568_R1-2_20260110_215524_merged.csv  ber_Turbo_LogMAP_K3568_R1-2_20260110_215543_merged.csv  overnight_summary_20260110_215137.md  overnight_summary_20260110_215513.md
(+14 files in other folders)
